--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kizou",
+  "homepage": "https://riuqlav.github.io/Portifolio",
+  "name": "Portifolio",
   "version": "0.1.0",
-  "homepage": "http://kizou.org",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.5.0",
