--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://riuqlav.github.io/Portifolio/",
   "name": "Portifolio",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
