--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://riuqlav.github.io/Portifolio/",
+  "homepage": "https://riuqlav.github.io/",
   "name": "Portifolio",
   "version": "0.1.0",
   "private": true,
